--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
 <h1>My Video Page</h1>
 
 <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/6_DQPLihXfo?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
+    <iframe src="https://www.youtube.com/embed/JALTcEIZoZw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
     </iframe>
     
-    <!-- You can add more videos by copying this iframe structure -->
+    <iframe src="https://www.youtube.com/embed/5tN6eynMMNw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
+    
+     <iframe src="https://www.youtube.com/embed/6_DQPLihXfo?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
 </div>
 
 </body>
