--- a/index.html
+++ b/index.html
@@ -4,35 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Video Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .video-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-        iframe {
-            width: 300px;  /* Width of the video */
-            height: 169px; /* Height of the video based on 16:9 aspect ratio */
-            border: none;  /* Remove border */
-            border-radius: 10px; /* Round corners */
-            background-color: #000; /* Background color */
-        }
-    </style>
+    <title>ETHANOL AS FUEL</title>
 </head>
 <body>
 
-<h1>My Video Page</h1>
+<h1>ETHANOL AS FUEL</h1>
 
 <div class="video-container">
     <iframe src="https://www.youtube.com/embed/JALTcEIZoZw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
