--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a href="#">References</a>
         </div>
 
-<h1>ETHANOL AS FUEL</h1>
+<div class="h1" id="h1">
+      <h1>ETHANOL AS FUEL</h1>
+</div>
 
 <div class="h2" id="h2">
       <h2>Videos</h2>
