--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <div class="video-container" id="video">
 
-<p1>What & How</p1>
+<div class="p1">
+<p>What & How</p>
+</div>
 
     <iframe src="https://www.youtube.com/embed/JALTcEIZoZw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
