--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
     </iframe>
-    
- <p2>Who</p2> 
+
+<div class="p2">
+<p2>Who</p2> 
+</div>   
  
     <iframe src="https://www.youtube.com/embed/5tN6eynMMNw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
     </iframe>
  
- <p3>Why / Why Not</p3>
+<div class="p3">
+<p3>Why / Why Not</p3>
+</div>
      
      <iframe src="https://www.youtube.com/embed/6_DQPLihXfo?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
