--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="sidebar" id="sidebar">
         <a href="https://671507bb0dc76.site123.me/?fbclid=IwY2xjawGF4-RleHRuA2FlbQIxMAABHYaUhJvzNkaf5lmtdJWp-D8pnGTycdxhpp6B7vr7QTxZAoCjanFIDc2FLw_aem_RsKsGJfDXuqtokHLU0gChg">Lesson</a>
-        <a href="#">Videos</a>
+        <a href="https://github.com/fitszimoon/ethanolasfuelvideos/edit/main/index.html">Videos</a>
         <a href="#">Personas</a>
         <a href="#">References</a>
         </div>
@@ -32,7 +32,7 @@
 </div>
 
     <iframe src="https://www.youtube.com/embed/JALTcEIZoZw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
     </iframe>
 
@@ -41,7 +41,7 @@
 </div>   
  
     <iframe src="https://www.youtube.com/embed/5tN6eynMMNw?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
     </iframe>
  
@@ -50,7 +50,7 @@
 </div>
      
      <iframe src="https://www.youtube.com/embed/6_DQPLihXfo?rel=0&showinfo=0&color=white&iv_load_policy=3&enablejsapi=1&playsinline=1&autoplay=1" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
     </iframe>
 </div>
