--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="sidebar" id="sidebar">
         <a href="https://671507bb0dc76.site123.me/?fbclid=IwY2xjawGF4-RleHRuA2FlbQIxMAABHYaUhJvzNkaf5lmtdJWp-D8pnGTycdxhpp6B7vr7QTxZAoCjanFIDc2FLw_aem_RsKsGJfDXuqtokHLU0gChg">Lesson</a>
-        <a href="https://github.com/fitszimoon/ethanolasfuelvideos/edit/main/index.html">Videos</a>
+        <a href="https://fitszimoon.github.io/ethanolasfuelvideos/">Videos</a>
         <a href="#">Personas</a>
         <a href="#">References</a>
         </div>
